--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jwt-auth",
+  "name": "jwt-auth-demo",
   "author": {
     "name": "williamgdo"
   },
@@ -11,11 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "dotenv": "^16.3.1"
   }
 }
